--- a/Ketch/Base.lproj/Main.storyboard
+++ b/Ketch/Base.lproj/Main.storyboard
@@ -110,7 +110,7 @@ SAILED FOR TODAY.</string>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="Vhy-hq-gwn" kind="presentation" identifier="NoGameToSettings" id="6ym-FC-Y97"/>
+                                    <segue destination="Vhy-hq-gwn" kind="show" identifier="NoGameToSettings" id="6ym-FC-Y97"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eR7-L5-Jvf" userLabel="Dock">
@@ -192,7 +192,7 @@ SAILED FOR TODAY.</string>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="Vhy-hq-gwn" kind="presentation" identifier="GameToSettings" id="nCf-mq-8Rt"/>
+                                    <segue destination="Vhy-hq-gwn" kind="show" identifier="GameToSettings" id="nCf-mq-8Rt"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SMl-V4-Z7A" userLabel="Dock">
@@ -451,7 +451,7 @@ SAILED FOR TODAY.</string>
                 <viewController storyboardIdentifier="Settings" id="Vhy-hq-gwn" customClass="SettingsViewController" sceneMemberID="viewController">
                     <connections>
                         <segue destination="G4Y-Ae-Xgh" kind="presentation" identifier="SettingsToProfile" id="9mb-SI-KHc"/>
-                        <segue destination="rRd-ZO-60U" kind="presentation" identifier="SettingsToCrab" id="LKi-wK-Agw"/>
+                        <segue destination="rRd-ZO-60U" kind="show" identifier="SettingsToCrab" id="LKi-wK-Agw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zfc-Bp-zvE" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -582,9 +582,9 @@ SAILED FOR TODAY.</string>
         <image name="game-empty-share-twitter" width="60" height="61"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="nCf-mq-8Rt"/>
-        <segue reference="q7i-Iz-xMU"/>
+        <segue reference="6ym-FC-Y97"/>
         <segue reference="LKi-wK-Agw"/>
         <segue reference="T9Y-bJ-q8s"/>
+        <segue reference="q7i-Iz-xMU"/>
     </inferredMetricsTieBreakers>
 </document>
