--- a/Ketch/Base.lproj/Main.storyboard
+++ b/Ketch/Base.lproj/Main.storyboard
@@ -292,7 +292,7 @@ SAILED FOR TODAY.</string>
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s2S-Vm-p8n" userLabel="Confirm Button" customClass="DesignableButton" customModule="Ketch" customModuleProvider="target">
-                                <rect key="frame" x="175" y="384" width="250" height="54"/>
+                                <rect key="frame" x="175" y="446" width="250" height="54"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="54" id="I1o-Jn-3rM"/>
@@ -365,13 +365,13 @@ SAILED FOR TODAY.</string>
                             <constraint firstItem="C5L-zq-XTw" firstAttribute="top" secondItem="ZdL-6o-ahC" secondAttribute="top" id="baL-WL-VNx"/>
                             <constraint firstItem="Jqh-bc-UMn" firstAttribute="width" secondItem="2Mo-6y-hwh" secondAttribute="width" id="c0U-J7-kqI"/>
                             <constraint firstItem="Jqh-bc-UMn" firstAttribute="width" secondItem="sNf-t3-S46" secondAttribute="width" id="de5-PX-OG9"/>
-                            <constraint firstItem="YSC-OD-kWb" firstAttribute="centerY" secondItem="s2S-Vm-p8n" secondAttribute="centerY" constant="-20" id="edV-X7-Ra2"/>
                             <constraint firstItem="C5L-zq-XTw" firstAttribute="width" secondItem="2Mo-6y-hwh" secondAttribute="width" id="hoG-JN-feM"/>
                             <constraint firstItem="2Mo-6y-hwh" firstAttribute="width" secondItem="ZdL-6o-ahC" secondAttribute="width" id="oHl-VI-KED"/>
                             <constraint firstItem="Jqh-bc-UMn" firstAttribute="width" secondItem="arw-4e-pup" secondAttribute="width" id="oL9-BF-2cB"/>
                             <constraint firstItem="SMl-V4-Z7A" firstAttribute="trailing" secondItem="Rx1-xy-YKJ" secondAttribute="trailing" constant="20" id="ovx-gg-9KV"/>
                             <constraint firstItem="cK6-TY-fKz" firstAttribute="top" secondItem="SYM-1r-qph" secondAttribute="bottom" id="p3O-Rl-amj"/>
                             <constraint firstItem="Jqh-bc-UMn" firstAttribute="centerY" secondItem="sNf-t3-S46" secondAttribute="centerY" id="ptI-Oq-AIc"/>
+                            <constraint firstItem="f9R-rk-GCL" firstAttribute="top" secondItem="s2S-Vm-p8n" secondAttribute="bottom" constant="100" id="utA-MT-zKS"/>
                             <constraint firstItem="arw-4e-pup" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Jqh-bc-UMn" secondAttribute="trailing" constant="20" id="w97-7r-qsX"/>
                             <constraint firstAttribute="centerY" secondItem="2Mo-6y-hwh" secondAttribute="centerY" priority="252" constant="175" id="ya7-py-po4"/>
                         </constraints>
@@ -582,9 +582,9 @@ SAILED FOR TODAY.</string>
         <image name="game-empty-share-twitter" width="60" height="61"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="6ym-FC-Y97"/>
+        <segue reference="q7i-Iz-xMU"/>
+        <segue reference="nCf-mq-8Rt"/>
         <segue reference="LKi-wK-Agw"/>
         <segue reference="T9Y-bJ-q8s"/>
-        <segue reference="q7i-Iz-xMU"/>
     </inferredMetricsTieBreakers>
 </document>
